Update PORT variable to use production URL

--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 JWT_SECRET = "your_jwt_secret_key"
-PORT = 3000
+PORT = https://backend-liart-theta.vercel.app/
 
 # This was inserted by `prisma init`:
 # Environment variables declared in this file are NOT automatically loaded by Prisma.
